Try to fix horizontal scroll

--- a/gui/slick/css/style.css
+++ b/gui/slick/css/style.css
@@ -2165,6 +2165,10 @@ span.true {
     /* green */
 }
 
+span.break-word {
+	word-wrap: break-word;
+}
+
 option.flag {
     padding-left: 35px;
     background-repeat: no-repeat;
